--- a/resources/lesson21/history.txt
+++ b/resources/lesson21/history.txt
@@ -1,2 +1,3 @@
-Transaction{id=5da28809-ccb4-4788-be17-886f3bbbad99, sum=74, accountId=2eaa6783-5bf4-4a49-b5c6-5a6bc8c136bd, type=COMMISSION}
-Transaction{id=aa286d40-9666-4b15-a98a-e27069a9306e, sum=223, accountId=19036949-b387-40e5-b882-11e4e9147109, type=COMMISSION}
+4fbe97d0-1488-47fd-9a1d-c4e192dbb58e/965/32b00565-ec13-497d-b63f-80cb869e921f/COMMISSION
+8953757d-ec07-4c22-ae05-d966e28af406/396/2a7667b7-97eb-4eaf-b6c7-ed05ed643331/COMMISSION
+cdaa4861-f3f1-4b82-84b8-aa1f23dfe7fc/701/7129d599-a68f-4bf3-b7b6-f9b48799dec9/COMMISSION
